# fractal-rust

./: Cargo.toml  README.md
src/: cantor_gif.rs  dessiner_rectangle_egui.rs  main.rs  zoom_rectangle_gif.rs
